bug fixing for the USA and more elections for Hawaii.

--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -329,7 +329,7 @@ unionstate.1.d:0 "NEW ORLEANS. Our beloved leader, Huey Long, today addressed th
 unionstate.1.a:0 "Charles Lindbergh - A popular man of the people"
 unionstate.1.b:0 "Gerald L. K. Smith will overhaul the economic and political system"
 unionstate.1.c:0 "Father Charles Coughlin will promote a paternal corporate state"
-unionstate.1.e:0 "Fritz Kuhn will root out sedition and enemies of the Republic!"
+unionstate.1.e:0 "William Pelley will root out sedition and enemies of the Republic!"
 unionstate.2.t:0 "Where Will We Govern From?"
 unionstate.2.d:0 "With the end of the Civil War, we should decide where our capital will be. Will it be moved back to Washington?"
 unionstate.2.a:0 "Washington is a corrupt city."
@@ -340,8 +340,8 @@ unionstate.3.a:0 "Conscript the labour required"
 unionstate.3.b:0 "The corporations can handle this"
 
 unionstate.571.t:0 "The American Union State Youth"
-unionstate.571.d:0 "Fritz Kuhn has submitted a plan to start a Youth Foundation in the AUS and is looking for approval. The Foundation would show Adolescents the purpose of America First and to teach them discipline above all things and loyalty to the New State. We're in need of new recruits, and Fritz Kuhn's Youth Foundation may be part of the solution."
-unionstate.571.a:0 "Let Kuhn have his Daycare"
+unionstate.571.d:0 "William Pelley has submitted a plan to start a Youth Foundation in the AUS and is looking for approval. The Foundation would show Adolescents the purpose of America First and to teach them discipline above all things and loyalty to the New State. We're in need of new recruits, and Pelley's Youth Foundation may be part of the solution."
+unionstate.571.a:0 "Let Pelley have his Daycare"
 unionstate.571.b:0 "We don't feel comfortable about this..."
 
 unionstate.6.t:0 "The CSA Escapes to France"
