--- a/localisation/KR_Hawaii_l_english.yml
+++ b/localisation/KR_Hawaii_l_english.yml
@@ -293,29 +293,82 @@ hawaii.28.c:0 "It is time for a revolution!"
 hawaii.29.t:0 "Restoration of the Monarchy"
 hawaii.29.d:0 "In a lavish ceremony at the ʻIolani Palace in Honolulu, Jonah Kalanianaʻole was crowned as King of Hawai'i with his wife Elizabeth Kahanu Kalanianaʻole was crowned queen of Hawai'i. The ceremony was overseen by Episcopal Bishop Samuel Littell. The coronation was filled to the brim with cheering crowds happy to see the coronation of their new king."
 hawaii.29.a:0 "The life of the land is perpetuated in righteousness"
-hawaii.30.t:0 "Establishing a republic"
-hawaii.30.d:0 "At the ʻIolani Palace delegates from across Hawai'i have agreed to form a republic. All have taken an oath to protect and defend Hawai'i. Crowds have gathered outside to hear the proclamation of a republic cheering on. There will be much work to set up the republic of Hawai'i, not the least of an election will need to be held in the future."
-hawaii.30.a:0 "Long Live Hawai'i"
-hawaii.31.t:0 "The Hawai'ian Revolution!"
-hawaii.31.d:0 "While the rich plantation owners, industrialists, nobility all gathered in Honolulu to discuss the future of Hawai'i they paid little heed to the poor toiling away on the plantations or in the factories. Following the lead of the CSA in America, a number of labour organises like Jack Hall have gone to the various plantations and factories and have lead an insurrection against the ruling elites. Fleeing from Honolulu as fast as they can, a new government was set up in the capital, a government truly for the people."
-hawaii.31.a:0 "Break the Chains!"
+hawaii.30.t:0 "Election of the Kuhina Nui"
+hawaii.30.d:0 "With the restoration of the kingdom of Hawai'i, it is time for an election of the Kuhina Nui or Prime minster. The Kuhina Nui is the head of government and will be directly elected by the people. Four parties have emerged to try and win the election the Progressive Party, The National Liberal Party, The Reform Party and the National Party. Of course whom would the voters choose?"
+hawaii.30.a:0 "The National Party Wins!"
+hawaii.30.b:0 "The Reform Party Wins!"
+hawaii.30.c:0 "The National Liberal Party Wins!"
+hawaii.30.e:0 "The Progressive Party Wins!"
+hawaii.31.t:0 "Election of the Kuhina Nui"
+hawaii.31.d:0 "It is time for another election of the Kuhina Nui. Whom shall the voters choose?"
+hawaii.31.a:0 "The National Party Wins!"
+hawaii.31.b:0 "The Reform Party Wins!"
+hawaii.31.c:0 "The National Liberal Party Wins!"
+hawaii.31.e:0 "The Progressive Party Wins!"
 hawaii.32.t:0 "Election of the Kuhina Nui"
-hawaii.32.d:0 "With the restoration of the kingdom of Hawai'i, it is time for an election of the Kuhina Nui or Prime minster. The Kuhina Nui is the head of government and will be directly elected by the people. Four parties have emerged to try and win the election the Progressive Party, The National Liberal Party, The Reform Party and the National Party. Of course whom would the voters choose?"
+hawaii.32.d:0 "It is time for another election of the Kuhina Nui. Whom shall the voters choose?"
 hawaii.32.a:0 "The National Party Wins!"
 hawaii.32.b:0 "The Reform Party Wins!"
 hawaii.32.c:0 "The National Liberal Party Wins!"
 hawaii.32.e:0 "The Progressive Party Wins!"
-hawaii.33.t:0 "Election of President"
-hawaii.33.d:0 "Now with the constitution of the Republic of Hawai'i has been written, the first elections for the president of Hawai'i. The President of Hawai'i will be directly elected by the people of Hawai'i on universal suffrage for all men and women. Several parties are running for the first time, the Progressive Party, The National Liberal Party, The Reform Party and the National Party."
+hawaii.33.t:0 "Election of the Kuhina Nui"
+hawaii.33.d:0 "It is time for another election of the Kuhina Nui. Whom shall the voters choose?"
 hawaii.33.a:0 "The National Party Wins!"
 hawaii.33.b:0 "The Reform Party Wins!"
 hawaii.33.c:0 "The National Liberal Party Wins!"
 hawaii.33.e:0 "The Progressive Party Wins!"
-hawaii.34.t:0 "Election of General Secretary"
-hawaii.34.d:0 "While the revolution has implemented direct democracy on the different islands under our rule. However, there needs to be an election of the People's Council of Hawai'i that shall help guide the Hawaiian people particularly in foreign affairs. There are three large factions that have a chance at winning power, the social democrat Progressives, the Radical Socialist combined Syndicates of Hawai'i and the Syndicalist Pineapple workers Union."
-hawaii.34.a:0 "The Syndicalists Win"
-hawaii.34.b:0 "The Radical Socialist Win"
-hawaii.34.c:0 "The Progressives Win"
+hawaii.34.t:0 "Establishing a republic"
+hawaii.34.d:0 "At the ʻIolani Palace delegates from across Hawai'i have agreed to form a republic. All have taken an oath to protect and defend Hawai'i. Crowds have gathered outside to hear the proclamation of a republic cheering on. There will be much work to set up the republic of Hawai'i, not the least of an election will need to be held in the future."
+hawaii.34.a:0 "Long Live Hawai'i"
+hawaii.35.t:0 "Election of President"
+hawaii.35.d:0 "Now with the constitution of the Republic of Hawai'i has been written, the first elections for the president of Hawai'i. The President of Hawai'i will be directly elected by the people of Hawai'i on universal suffrage for all men and women. Several parties are running for the first time, the Progressive Party, The National Liberal Party, The Reform Party and the National Party."
+hawaii.35.a:0 "The National Party Wins!"
+hawaii.35.b:0 "The Reform Party Wins!"
+hawaii.35.c:0 "The National Liberal Party Wins!"
+hawaii.35.e:0 "The Progressive Party Wins!"
+hawaii.36.t:0 "Election of President"
+hawaii.36.d:0 "It is time for another election for the President of Hawaii. Whom shall the voters choose?"
+hawaii.36.a:0 "The National Party Wins!"
+hawaii.36.b:0 "The Reform Party Wins!"
+hawaii.36.c:0 "The National Liberal Party Wins!"
+hawaii.36.e:0 "The Progressive Party Wins!"
+hawaii.37.t:0 "Election of President"
+hawaii.37.d:0 "It is time for another election for the President of Hawaii. Whom shall the voters choose?"
+hawaii.37.a:0 "The National Party Wins!"
+hawaii.37.b:0 "The Reform Party Wins!"
+hawaii.37.c:0 "The National Liberal Party Wins!"
+hawaii.37.e:0 "The Progressive Party Wins!"
+hawaii.38.t:0 "Election of President"
+hawaii.38.d:0 "It is time for another election for the President of Hawaii. Whom shall the voters choose?"
+hawaii.38.a:0 "The National Party Wins!"
+hawaii.38.b:0 "The Reform Party Wins!"
+hawaii.38.c:0 "The National Liberal Party Wins!"
+hawaii.38.e:0 "The Progressive Party Wins!"
+hawaii.39.t:0 "The Hawai'ian Revolution!"
+hawaii.39.d:0 "While the rich plantation owners, industrialists, nobility all gathered in Honolulu to discuss the future of Hawai'i they paid little heed to the poor toiling away on the plantations or in the factories. Following the lead of the CSA in America, a number of labour organises like Jack Hall have gone to the various plantations and factories and have lead an insurrection against the ruling elites. Fleeing from Honolulu as fast as they can, a new government was set up in the capital, a government truly for the people."
+hawaii.39.a:0 "Break the Chains!"
+hawaii.40.t:0 "Election of General Secretary"
+hawaii.40.d:0 "While the revolution has implemented direct democracy on the different islands under our rule. However, there needs to be an election of the People's Council of Hawai'i that shall help guide the Hawaiian people particularly in foreign affairs. There are three large factions that have a chance at winning power, the social democrat Progressives, the Radical Socialist combined Syndicates of Hawai'i and the Syndicalist Pineapple workers Union."
+hawaii.40.a:0 "The Syndicalists Win"
+hawaii.40.b:0 "The Radical Socialist Win"
+hawaii.40.c:0 "The Progressives Win"
+hawaii.41.t:0 "Election of General Secretary"
+hawaii.41.d:0 "It is time for another election for the General Secretary of Hawaii. Whom shall the voters choose?"
+hawaii.41.a:0 "The Syndicalists Win"
+hawaii.41.b:0 "The Radical Socialist Win"
+hawaii.41.c:0 "The Progressives Win"
+hawaii.42.t:0 "Election of General Secretary"
+hawaii.42.d:0 "It is time for another election for the General Secretary of Hawaii. Whom shall the voters choose?"
+hawaii.42.a:0 "The Syndicalists Win"
+hawaii.42.b:0 "The Radical Socialist Win"
+hawaii.42.c:0 "The Progressives Win"
+hawaii.43.t:0 "Election of General Secretary"
+hawaii.43.d:0 "It is time for another election for the General Secretary of Hawaii. Whom shall the voters choose?"
+hawaii.43.a:0 "The Syndicalists Win"
+hawaii.43.b:0 "The Radical Socialist Win"
+hawaii.43.c:0 "The Progressives Win"
+
+
 hawaii.100.t:0 "Hawaii Requests Entry into the International"
 hawaii.100.d:0 "We have received a request from the Commune of Hawaii to join the International. A few years back this tiny land broke off from America and went through there own revolution. The strategic position of Hawaii makes them a valuable member for the International. However others were concerned about getting dragged into conflicts in that region."
 hawaii.100.a:0 "A welcome addition"
