POL flavor stuff + Portraits from Rylock.

--- a/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
+++ b/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
@@ -92,8 +92,8 @@ PLC_the_new_bureaucracy:0 "The Bureaucracy First"
 PLC_solve_racial_tensions:0 "Solve Cultural Tensions"
 PLC_a_unifying_faith:0 "Re-Institute the Warsaw Confederation"
 PLC_a_new_capital:0 "Building the New Capital"
-PLC_expand_vilnius:0 "Expand Vilnius"
-PLC_build_warsaw_palace:0 "The Palace at Warsaw"
+PLC_expand_vilnius:0 "Rebuild the Palace of the Grand Dukes"
+PLC_build_warsaw_palace:0 "Renovate the Royal Castle at Warsaw"
 PLC_sejm_dominance:0 "Dominate the Sejm"
 PLC_mendog_iii:0 "The Reign of Mindaugas III of Urach"
 PLC_lithuanian_lead:0 "Lithuanian Leadership"
@@ -211,8 +211,8 @@ PLC_the_new_bureaucracy_desc:0 "The bureaucracy of the Commonwealth is strugglin
 PLC_solve_racial_tensions_desc:0 "Despite our best efforts to the contrary, in the uncertainty of our new nation's birth, a mistrust has formed between the Polish and Lithuanian peoples. We must resolve this at once if we are to move forward as one unified state."
 PLC_a_unifying_faith_desc:0 "The Warsaw Confederation, signed in 1573, was a document that pledged mutual support and tolerance between all religious groups in the union. Re-drafting this historic confederation will have great value both practically and symbolically. Even if we cannot all come together in the politics of our nation, we can find common ground in faith. It is not the end of our troubles, but it is a start."
 PLC_a_new_capital_desc:0 "The new capital contains almost none of the required infrastructure to contain the proper capital of a nation-state. We must rectify this immediately if we are to run the government from this new location."
-PLC_expand_vilnius_desc:0 "Vilnius is as it stands a small city compared to the great seats of power across the globe. We must expand the city so that it can stand proud among the other capitals of Europe."
-PLC_build_warsaw_palace_desc:0 "The seat of J.K.D. Mendog III, the palace at Warsaw stands as a representation of our power and opulence. By expanding and improving the palace, we signal that the new Commonwealth is a nation with the wealth and power to stand among the great powers of our time."
+PLC_expand_vilnius_desc:0 "Vilnius is as it stands a small city compared to the great seats of power across the globe. We must rebuild the lost Palace of the Grand Dukes of Lithuania, destroyed in 1801, so that it can stand proud among the other capitals of Europe."
+PLC_build_warsaw_palace_desc:0 "The seat of J.K.D. Mendog III, the Royal Castle at Warsaw stands as a representation of our power and opulence. By expanding and improving the Castle, we signal that the new Commonwealth is a nation with the wealth and power to stand among the great powers of our time."
 PLC_sejm_dominance_desc:0 "With the Commonwealth's Sejm based in Warsaw, the Polish have an extensive home-field advantage when the governmental body meets. Exploiting this dominance will allow us to push through every political measure we deem necessary, and reduce the chance of Polish-Lithuanian bipartisanship from grinding our government to a halt."
 PLC_mendog_iii_desc:0 "Mindaugas III of Urach is a symbol of unity and peace that is admired not only inside the nation, but outside it as well. The King as he stands is a powerful symbol for unity, but with a little effort from our Ministry of Propaganda, he could become an almost legendary figure, inspiring our people and soldiers to work harder than ever before."
 PLC_lithuanian_lead_desc:0 "With Vilnius as the capital of the new Commonwealth, and Mindaugas III on the throne, it is time for the Lithuanian people to leverage these advantages and take charge of the nation, and to be the leading force in Commonwealth politics."
