--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -1192,6 +1192,23 @@ poland.209.a:0 "With this signature, a new age begins."
 poland.210.t:0 "Black Monday Hits Poland"
 poland.210.d:0 "The effects of Black Monday are speading throughout the economic world, and Poland is not immune to this disaster. Although economically isolated from most of Europe due to her political situation, Poland's economy still relies heavily on German trading. \n\nNews of this economic disaster has caused a run on banks across the nation, and people are already demanding that the impotent government take action. We can only hope to survive the coming storm."
 poland.210.a:0 "Let us hope our economy survives."
+poland.211.t:0 "The Fate of the Royal Castle"
+poland.211.d:0 "Constructed in 1598 as the seat of power for Sigismund III, the Royal Castle in Warsaw has stood as the seat of Polish Kings for hundreds of years. But now, as the country has thrown off the shackles of Monarchist oppression, the Castle sits as a blight upon the worker's paradise that is Warsaw. \n\nMany proposals have been put forth on how to deal with this eyesore, but only one can be chosen."
+poland.211.a:0 "Redesign it to serve the Syndicalist government."
+poland.211.b:0 "Renovate it as a museum to workers worldwide."
+poland.211.c:0 "Tear it down, and put a park in its place."
+poland.211.t:0 "The Fate of the Royal Castle"
+poland.211.d:0 "Constructed in 1598 as the seat of power for Sigismund III, the Royal Castle in Warsaw has stood as the seat of Polish Kings for hundreds of years. But now, as the country has thrown off the shackles of Monarchist oppression, the Castle sits as a blight upon the worker's paradise that is Warsaw. \n\nMany proposals have been put forth on how to deal with this eyesore, but only one can be chosen."
+poland.211.a:0 "Redesign it to serve the Syndicalist government."
+poland.212.t:0 "Monarchist Train Bombing"
+poland.212.d:0 "Late last night a train arriving in Lublin was rocked by a large explosion which destoryed the railway and several train cars. While no civilians were hurt in the explosion, anti-government slogans were found painted on the side of the train, alongside messages praising the old Kingdom.\n\nLocal newspapers have already begun running stories on the "Monarchist Menace".  It seems that the Monarchist faction is growing more bold in their actions."
+poland.212.a:0 "We must deal with these Monarchists."
+poland.213.t:0 "Monarchist Assassination"
+poland.213.d:0 "Today on his way home from a long political meeting, the local governer in Lodz was killed by a small bomb being thrown at his vehicle. The bomb killed both the governer and his driver, and caused panic throughout the city. The assailant was heard shouting pro-Monarchist slogans as he dissapeared into the crowds. Local police have been unable to identify the attacker, despite a hours-long search."
+poland.213.a:0 "Damn!"
+poland.214.t:0 "The Monarchist Militia"
+poland.214.d:0 "Rumors have been spreading of a "Monarchist Militia" being formed in the Polish countryside in opposition to the government. While no real actions have been taken against the government as of yet, the fact that this "Militia" can be neither found nor dealt with is beginning to wear on the people's faith in the state."
+poland.214.a:0 "The Monarchists must be stopped!"
 
 ### Global Flags ###
 POL_REPUBLIC:0 "Declared the Polish Republic"
