Fengtian events, localization, some other stuff.

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -86,7 +86,7 @@ FNG_SQI_UNION_JAP:0 "Fengtian and Shangqing United"
 FNG_MANTETSU_COLLAB:0 "Mantetsu Collaboration"
 FNG_SILVER_RESERVE_FULL:0 "Silver Reserve Full"
 
-### Focuses ###
+### Foci ###
 FNG_Preservation_of_the_Xinhai_Order:0 "Preservation of the Xinhai Order"
 FNG_Preservation_of_the_Xinhai_Order_desc:0 "Ironically, Fengtian is the sole national government upholding the order established by the Xinhai Revolution in 1911, which called for the overthrow of the Qing and the establishment of a Republic. Although its republican commitments are questionable, and Southern reclamation is currently unrealistic, the government has loudly advocated both goals, as they foster domestic legitimacy."
 FNG_Fuguo_Qiangbing:0 "Fuguo Qiangbing"
@@ -115,7 +115,7 @@ FNG_Fengtian_Society_for_Light_Metals_desc: "Significant deposits of Bauxite and
 FNG_Yalu_and_Songhua_Hydroelectricity:0 "Yalu and Songhua Hydroelectricity"
 FNG_Yalu_and_Songhua_Hydroelectricity_desc:0 "Manchuria's abundant coal deposits make for an excellent power source, but the powerful currents of the Yalu and Songhua rivers could provide additional power at minimal expense. With Japanese expertise, we might harness these mighty rivers to power more homes and industry."
 FNG_Japanese_Coal_Gasification_Methods:0 "Japanese Coal Gasification Methods"
-FNG_Japanese_Coal_Gasification_Methods_desc:0 "Japan's quest for crucial oil lead it to Manchria, but now with disappointing results from prospecting, coal gasification seems the only logical path forward. Though energy intensive, Fushun's enormous coal deposits could make the complex processes worthwhile."
+FNG_Japanese_Coal_Gasification_Methods_desc:0 "Japan's quest for crucial oil lead it to Manchuria, but now with disappointing results from prospecting, coal gasification seems the only logical path forward. Though energy intensive, Fushun's enormous coal deposits could make the complex processes worthwhile."
 FNG_Manchurian_Model_Cities:0 "Manchurian Model Cities"
 FNG_Manchurian_Model_Cities_desc:0 "Japan sometimes goes to surprising lengths to portray its role in Fengtian as one of benevolent paternalism, to which end Mantetsu plans to install state of the art electrical, sewer, and tram systems in the major cities of Mukden, Yingkou, Changchun, and Harbin."
 #Industrial Development Committee Section
@@ -587,7 +587,7 @@ fengtian.new.41.d:0 "The third and final Hiroshima Package has arrived, containi
 fengtian.new.41.a:0 "Good"
 #Soy Agricultural Initiative
 fengtian.new.42.t:0 "The Soy Agricultural Initiative"
-fengtian.new.42.d:0 "-"Soybeans are an extremely flexible crop, useful for human food, animal feed, fertiliser, and for a wide variety of industrial applications. Mantetsu's Research Wing has made great strides in making its growing, processing, and use more efficient, but planting percentages across Fengtian remain relatively stagnant. Korean farmers, who make up the majority of immigrants to Manchuria, are excellent rice planters, and in addition to many Chinese prefer to plant crops they have more experience with instead of Soy. \n\n In an attempt to change this, Mantetsu began the Soy Agricultural Initiative, a plan intending to educate farmers and incentivise the production of soy as a cash crop, but it has so far been poorly received. Mantetsu hopes to gain the government's support in promoting the initiative, which would almost certainly increase soy yields and therefore long term profits.""
+fengtian.new.42.d:0 ""Soybeans are an extremely flexible crop, useful for human food, animal feed, fertiliser, and for a wide variety of industrial applications. Mantetsu's Research Wing has made great strides in making its growing, processing, and use more efficient, but planting percentages across Fengtian remain relatively stagnant. Korean farmers, who make up the majority of immigrants to Manchuria, are excellent rice planters, and in addition to many Chinese prefer to plant crops they have more experience with instead of Soy. \n\n In an attempt to change this, Mantetsu began the Soy Agricultural Initiative, a plan intending to educate farmers and incentivise the production of soy as a cash crop, but it has so far been poorly received. Mantetsu hopes to gain the government's support in promoting the initiative, which would almost certainly increase soy yields and therefore long term profits.""
 fengtian.new.42.a:0 "Back the Initiative"
 fengtian.new.42.b:0 "We need no more soy"
 fengtian.new.43.t:0 "Japan and Korea Struggle with Drought"
@@ -754,7 +754,7 @@ fengtian.new.78.a:0 "We have no choice"
 fengtian.new.78.b:0 "Let there be war!"
 
 fengtian.new.79.t:0 "Wu Wang Zai Ju"
-fengtian.new.79.d:0 "The years since the formation of our Government have laid for us a solid foundation for national regeneration. We fear no problems, nor are we concerned over impending dangers. We merely lament the fate of the South, the freedom of which was originally brought about by the hard efforts and sacrifices of reformist patriots, and which has since been erased by the old and outmoded forms of government. Today, her people are powerless, and her rulers without integrity, thus allowing the slow degradation of the national condition, and the return to a state of total subservience to Western nations. These old ways are sapping China's national strength, shaking her national foundations and, subjugating her people. \n\n It is thus that we find ourselves in the North, as the final bastion of all that our predecessors struggled to build, and the bearers of the future of a new China. The regressive Qing government likes to say that, by fortifying the Northeast, we are 'digging a hole to die in'. To this I say 'Forget not what happened in Ju'! It was to Ju that the State of Qi retreated, and from there that it reconquered all that it had lost. When the time is right, the Northeast will be our Ju, and the whole of China will be our Qi. The War of Southern Reclamation is inevitable, long live the Republic!"
+fengtian.new.79.d:0 "The years since the formation of our Government have laid for us a solid foundation for national regeneration. We fear no problems, nor are we concerned over impending dangers. We merely lament the fate of the South, the freedom of which was originally brought about by the hard efforts and sacrifices of reformist patriots, and which has since been erased by the old and outmoded forms of government. Today, her people are powerless, and her rulers without integrity, thus allowing the slow degradation of the national condition, and the return to a state of total subservience to Western nations. These old ways are sapping China’s national strength, shaking her national foundations and, subjugating her people. \n\n It is thus that we find ourselves in the North, as the final bastion of all that our predecessors struggled to build, and the bearers of the future of a new China. The regressive Qing government likes to say that, by fortifying the Northeast, we are 'digging a hole to die in'. To this I say 'Forget not what happened in Ju'! It was to Ju that the State of Qi retreated, and from there that it reconquered all that it had lost. When the time is right, the Northeast will be our Ju, and the whole of China will be our Qi. The War of Southern Reclamation is inevitable, long live the Republic!"
 fengtian.new.79.a:0 "Wansui!"
 
 fengtian.new.80.t:0 "Retaking Chahar"
@@ -776,12 +776,12 @@ fengtian.new.83.d:0 "The necessary preparations have been made, and production w
 fengtian.new.83.a:0 "Good"
 
 fengtian.new.84.t:0 "Delays in Doihara's Plans"
-fengtian.new.84.d:0 "Communications from Doihara have been infrequent, scattered, and often evasive, until more recently when a he suggested a meeting in the old Astor House Hotel in Shanghai. Conveying his apologies for delays in his program over a very expensive meal in the elaborate dining room, Doihara seemed genuinely frustrated, but after returning, our agent has been careful to emphasise that progress is still on track and the money will be flowing soon. \n\n Other intelligence operatives in the Legation Cities, and other parts of China, tell a rather different story, and suggest that the operation is already profitable, with the vast majority of the money being used to fund Doihara's other subversive activities. The evidence seems to suggest that our representative in Shanghai has been bribed, but surely Doihara will eventually cough up what he's promised..."
+fengtian.new.84.d:0 "Communications from Doihara have been infrequent, scattered, and often evasive, until more recently when a he suggested a meeting in the old Astor House Hotel in Shanghai. Conveying his apologies for delays in his program over a very expensive meal in the elaborate dining room, Doihara seemed genuinely frustrated, but after returning, our agent has been careful to emphasize that progress is still on track and the money will be flowing soon. \n\n Other intelligence operatives in the Legation Cities, and other parts of China, tell a rather different story, and suggest that the operation is already profitable, with the vast majority of the money being used to fund Doihara's other subversive activities. The evidence seems to suggest that our representative in Shanghai has been bribed, but surely Doihara will eventually cough up what he's promised..."
 fengtian.new.84.a:0 "Unfortunate"
 fengtian.new.84.b:0 "We've had enough"
 
 fengtian.new.85.t:0 "Further Delays"
-fengtian.new.85.d:0 "Doihara has suggested another meeting, yet again after an extended period of limited communication, this time in a secluded hideaway near Xiamen in Fujian. Insisting that he has run into trouble with the Triads, Doihara once again apologises for the delays, but insists that we will receive them within the next several months. \n\n Most of our operatives assigned to monitor Doihara's activities have mysteriously disappeared, so his actual status is difficult to ascertain."
+fengtian.new.85.d:0 "Doihara has suggested another meeting, yet again after an extended period of limited communication, this time in a secluded hideaway near Xiamen in Fujian. Insisting that he has run into trouble with the Triads, Doihara once again apologizes for the delays, but insists that we will receive them within the next several months. \n\n Most of our operatives assigned to monitor Doihara's activities have mysteriously disappeared, so his actual status is difficult to ascertain."
 fengtian.new.85.a:0 "Unfortunate"
 fengtian.new.85.b:0 "We've had enough"
 
@@ -798,11 +798,11 @@ fengtian.new.88.d:0 "HIDDEN EVENT"
 fengtian.new.88.a:0 "HIDDEN EVENT"
 
 fengtian.new.89.t:0 "Doihara's Fate"
-fengtian.new.89.d:0 "INSERT" 
+fengtian.new.89.d:0 "One of our agents monitoring Doihara's progress has forwarded some unfortunate news. It seems that, in his efforts to secure profitable transfer rates in Shanghai, Doihara made enemies of the Green Gang Triad. His body was reportedly found outside a back-alley brothel alongside those of several bodyguards, identifiable only thanks to its uniform and testimonies from nearby civilians. \n\n Kempeitai agents have already begun an investigation in partnership with the Shanghai Municipal Police, but for all intents and purposes Doihara's initiative can be considered dead in the water." 
 fengtian.new.89.a:0 "So be it"
 
 fengtian.new.90.t:0 "Opium Addiction Spreads in Qing"
-fengtian.new.90.d:0 "INSERT"
+fengtian.new.90.d:0 "Despite the best efforts of local officials and even the Qing Government, opium addiction has slowly spread among the general population to levels rivaling those of the Tongzhi and Guangxu Eras, weakening the 'central government' and its armies. This is to our advantage, but if our efforts to bring this state of affairs about become public knowledge the public relations impact will be difficult to contain. The Opium trade has long been viewed as not only as an evil, but one brought about primarily as a tool of Western imperialism."
 fengtian.new.90.a:0 "Unfortunate but necessary"
 
 fengtian.new.91.t:0 "Escalating the Propaganda War"
@@ -878,6 +878,39 @@ fengtian.new.107.a:0 "Great news!"
 fengtian.new.108.t:0 "An Unexpected Advantage"
 fengtian.new.108.d:0 "INSERT"
 fengtian.new.108.a:0 "Glorious!"
+
+fengtian.new.109.t:0 "Shanhaiguan Uprising Fails"
+fengtian.new.109.d:0 "Before it could ever truly begin, our uprising south of Shanhaiguan was detected and quickly overwhelmed by the local Qing garrison in a short but violent confrontation. While we may encounter some survivors as we push South, we will have no organized assistance from the other side of the Great Wall."
+fengtian.new.109.a:0 "Damn"
+
+fengtian.new.110.t:0 "The Gang of Three"
+fengtian.new.110.d:0 "INSERT"
+fengtian.new.110.a:0 "What an embarassment"
+
+fengtian.new.111.t:0 "Mantetsu Bribes"
+fengtian.new.111.d:0 ""
+fengtian.new.111.a:0 "Disgusting"
+
+fengtian.new.112.t:0 "The Anshan Incident"
+fengtian.new.112.d:0 "The iron ore deposits at Anshan have been worked by a Japanese-owned subsidiary of Mantetsu since 1918, known as “Anshan Iron and Steel”, serving as one of Japan’s most valuable sources of steel outside the Home Islands. When the facilities were first constructed most of the ore required little digging, as the deposits lie close to the surface, but as of the current date more extensive excavation is required to continue operations. The company has begun this expansion work without acquiring a lease for the extra land from the local authorities, destroying several farm properties in the process, and despite promises neither compensation nor the lease have been forthcoming. \n\n Protests quickly broke out among local farmers over the issue, and quickly escalated into a riot that severely damaged expensive mining equipment, which our police refused to prevent, citing the technically illegal nature of the operations. On its own initiative, a nearby Japanese garrison from Anshan stepped in, and used lethal force to disperse the riot. This slaughter of our citizens has not gone unnoticed, and existing anti-Japanese sentiment has only been inflamed. The people will hold us accountable in our response, but the deposits and the company working them are essential to Japan’s strategic goals, and our relationship with the Japanese permits little room to maneuver."
+fengtian.new.112.a:0 "Denounce the Japanese"
+fengtian.new.112.b:0 "Stay silent"
+
+fengtian.new.113.t:0 "Japan Denounces Us"
+fengtian.new.113.d:0 "Describing our denouncement of their conduct during the recent Anshan Incident as 'insolent' and 'unbefitting of Japanese generosity', the Japanese government issued a scathing rebuke both publically and through a letter delivered directly by the Japanese Consul General in Mukden. The Kwantung Garrison performed a series of motorized and amored maneuvers in full view of the capital, their message clear. Any escalation of this situation would undoubtedly result in further rebukes to which we can make no meaningful response. "
+fengtian.new.113.a:0 "If only we did not need them"
+
+fengtian.new.114.t:0 "Imperial Han Society Killings"
+fengtian.new.114.d:0 "The Imperial Han Society, a secret society with a Han-chauvinistic ideology and uncompromising hate of other groups, is believed to be behind a number of killings in Mukden, Changchun, and Harbin. The targets appeared to be more or less random, linked only by their status as ethnic Russians, Manchu, Koreans, and Japanese. Mantetsu and the Japanese Consulate are already demanding investigations, and the Kempeitai have already carted away a number of suspects to an unknown fate."
+fengtian.new.114.a:0 "Imperial Han lives in the past"
+
+fengtian.new.115.t:0 "The Grand Marshal Radio Incident"
+fengtian.new.115.d:0 "In what has come to be known as 'The Grand Marshal Radio Incident', a Qing subversive was able to record a frank conversation between the Grand Marshal and his generals, and transmitted it over widely used frequencies in Mukden for nearly fourty minutes before being jammed by a nearby Mantetsu owned station. The conversation, in which the Grand Marshal described "enemies to the North, South, East, and West", puts Fengtian's relations with Japan in unconventionally blunt terms damaging to our propaganda and Japan's interests. \n\n The broadcast was doubly damaging thanks to its capture of Zhang discussing the realities of Qing's relative industrial and military strength, and the degree to which we must rely on the Japanese for crucial technology, something which we have been careful to conceal from the public."
+fengtian.new.115.a:0 "The truth is not pretty"
+
+fengtian.new.116.t:0 "Seditious Articles Proliferate"
+fengtian.new.116.d:0 "An article in the Nihon Kogyō Shimbun, or 'Japan Industrial Newspaper', has been translated into Chinese and spread widely in local newspapers before censorship officials managed to track and shut down the publisher. The article described in substantial detail the extensive degree to which Mantetsu and other Japanese companies have established control over most sectors of our economy, and set a forecast predicting near complete control within five years time. For obvious reasons, the article has been deeply upsetting to the general population, and there is little we can do to prevent the existing copies circulating."
+fengtian.new.116.a:0 "Disgraceful!"
 
 ### Informal Empire Mechanic ###
 fengtian.informalempire.1.t:0 "Expel the Japanese Bandits!"
