--- a/localisation/KR_Japan_Foreign_l_english.yml
+++ b/localisation/KR_Japan_Foreign_l_english.yml
@@ -875,8 +875,27 @@ japfor.202.b:0 "This is of their own making"
 
 japfor.203.t:0 "Fengtian Blames us for the Silver Crisis!"
 japfor.203.d:0 "Fengtian has loudly denounced Japan, citing what they say is a deliberate plot to destabilise their government through the eruption of their recent Silver Crisis, citing the incidental requests from both the Bank of Japan and Mitsui Bank for repayment on loans backed by Fengtian's silver reserve. With the reserve apparently containing far less than the Fengtian government claimed, its economy has spiralled out of control as the government loses credibility by the hour, and it seems likely that this crass and foolish attempt to deflect blame is mostly a reaction to their internal political situation. \n\n All the same, we can deny these ridiculous assertions, but can we also let this grave insolence go unpunished?"
-japfor.203.c:0 "False accusations!"
+japfor.203.a:0 "False accusations!"
 japfor.203.b:0 "Punish this insolence!"
+
+japfor.204.t:0 "Fengtian Expels our Military Mission"
+japfor.204.d:0 "INSERT"
+japfor.204.d_mantetsu:0 "INSERT"
+japfor.204.a:0 "Declare war"
+japfor.204.b:0 "Force Fengtian to reconsider"
+japfor.204.c:0 "Punish Fengtian"
+japfor.204.d:0 "Do nothing"
+
+japfor.205.t:0 "Fengtian Expels our Military Mission"
+japfor.205.d:0 "INSERT"
+japfor.205.a:0 "Send an Ultimatum"
+japfor.205.b:0 "Do nothing"
+
+japfor.206.t:0 "Fengtian Denounces Us!"
+japfor.206.d:0 "INSERT"
+japfor.206.a:0 "Punish this insolence!"
+japfor.206.b:0 "Denounce Fengtian"
+japfor.206.c:0 "Stay silent"
 
 ### Opinion Modifiers ###
 mon_demanded_states:0 "Demanded Territories"
