some fixes to Indian focus trees loc

--- a/localisation/KR_Dominion_of_India_l_english.yml
+++ b/localisation/KR_Dominion_of_India_l_english.yml
@@ -174,7 +174,7 @@ DEH_BHC_revolters:0 "An uprising erupts in Assam!\n"
 DEH_invadePRF:0 "Destroy the Southern Traitors!"
 DEH_invadePRF_desc:0 "The so-called 'Princely Federation' to the south is nothing but a nest of separatists traitors. We must crush them!"
 DEH_revoltPRF:0 "Incite Rebellion in the South!"
-DEH_revoltPRF:0 "The new Maharaja of Cochin has Imperial loyalties. If we could convince him to join us it would free up our troops to attack from the north, while Princely troops try to suppress his rebellion."
+DEH_revoltPRF_desc:0 "The new Maharaja of Cochin has Imperial loyalties. If we could convince him to join us it would free up our troops to attack from the north, while Princely troops try to suppress his rebellion."
 DEH_PRF_revolters:0 "The Maharaja of Cochin Revolts!\n"
 DEH_unifyindia:0 "Unify India!"
 DEH_unifyindia_desc:0 "Jai Hind! The subcontinent is once again ours! Now what?"
@@ -209,7 +209,7 @@ DEH_PRFreform1_desc:0 "We have brought about the complete collapse of the prince
 DEH_PRFreform2:0 "Integrate the Deccan Princely States"
 DEH_PRFreform2_desc:0 "The southern princely states were always somewhat politically detached from the federal government in Hyderabad. This makes it harder for us to establish an efficient central administration. Never the less, that is what we will have to achieve."
 DEH_bhartiya_officers:0 "Socialist India's Officer Corps"
-DEH_bhartiya_officers:0 "The first order of business is dealing with the officers of the defeated Bharatiya Commune. Do we give these socialists a place in our nation? Or retire them before they can make further trouble?"
+DEH_bhartiya_officers_desc:0 "The first order of business is dealing with the officers of the defeated Bharatiya Commune. Do we give these socialists a place in our nation? Or retire them before they can make further trouble?"
 DEH_industry_question:0 "The Question of Industry"
 DEH_industry_question_desc:0 "The Bharatiya Commune relied on nationalised industry, and its business leaders are now turning to us to answer the question regarding what they should do now - the answer for which will determine just how easy it will be for us to pacify the Commune's former heartland."
 DEH_orissa_question:0 "Fate of the Zamindar Squatters"
