--- a/localisation/KR_Princely_Federation_l_english.yml
+++ b/localisation/KR_Princely_Federation_l_english.yml
@@ -240,7 +240,7 @@ PRF_loyalist_states_desc:0 "The northern territories hold a large number of Prin
 PRF_question_of_rights:0 "Restructuring the Northern Provinces"
 PRF_question_of_rights_desc:0 "The Dominion of Delhi granted its citizenry a large number of personal rights. We must determine how to address their change in status, or face even more resistance to our rule."
 PRF_bhartiya_officers:0 "Socialist India's Officer Corps"
-PRF_bhartiya_officers:0 "The first order of business is dealing with the officers of the defeated Bharatiya Commune. Do we give these socialists a place in our nation? Or retire them before they can make further trouble?"
+PRF_bhartiya_officers_desc:0 "The first order of business is dealing with the officers of the defeated Bharatiya Commune. Do we give these socialists a place in our nation? Or retire them before they can make further trouble?"
 PRF_industry_question:0 "The Question of Industry"
 PRF_industry_question_desc:0 "The Bharatiya Commune relied on nationalised industry, and its business leaders are now turning to us to answer the question regarding what they should do now - the answer for which will determine just how easy it will be for us to pacify the Commune's former heartland."
 PRF_orissa_question:0 "Fate of the Zamindar Squatters"
