--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -165,6 +165,7 @@ worldnews.23.g:0 "We will make the legacy of the Commonwealth proud!"
 
 worldnews.24.t:0 "Oswald Mosley elected as Chairman of the TUC"
 worldnews.24.d:0 "The 1936 Trade Union Congress in the Union of Britain was made out to be decisive. Long-time Chairman of the TUC, Philip Snowden, declared his resignation, causing the four major factions in the Union, Maximists, Autonomists, Federationists and Congregationists, to butt heads over the position.\n\nAnd as the dust settled, Oswald Mosley, leader of the Maximists and a Totalist ideologue, has been appointed as the new Chairman. Mosley's faction supports a strong central government and full state control of the economy, and are much more in favour of military action and British nationalism that any other faction."
+worldnews.24.d.voted_again:0 "The failure of the initial 1936 Trade Union Congress in the Union of Britain caused much unrest, and until today the country was in inertia, led by an undecisive coalition in the TUC. Finally, today, the British voters went back to the polls for the same exact candidates.\n\nAnd as the dust settled, Oswald Mosley, leader of the Maximists and a Totalist ideologue, has been appointed as the new Chairman. Mosley's faction supports a strong central government and full state control of the economy, and are much more in favour of military action and British nationalism that any other faction."
 worldnews.24.a:0 "British Syndicalism shows its true face."
 worldnews.24.b:0 "The Maximist's policies sound a bit extreme."
 worldnews.24.c:0 "Chairman Mosley is an example to us all!"
@@ -173,6 +174,7 @@ worldnews.24.f:0 "Chairman Mosley will usher in a new era for English Socialism!
 
 worldnews.25.t:0 "Niclas y Glais elected as Chairman of the TUC"
 worldnews.25.d:0 "The 1936 Trade Union Congress in the Union of Britain was made out to be decisive. Long-time Chairman of the TUC, Philip Snowden, declared his resignation, causing the four major factions in the Union, Maximists, Autonomists, Federationists and Congregationists, to butt heads over the position.\n\nAnd as the dust settles, Welsh poet and leader of the Autonomists, Niclas y Glais, has been sworn in as the new Chairman. The Autonomists support further decentralisation of the Union of Britain and even greater autonomy to the Welsh and Scottish nations, perhaps even full independence."
+worldnews.25.d.voted_again:0 "The failure of the initial 1936 Trade Union Congress in the Union of Britain caused much unrest, and until today the country was in inertia, led by an undecisive coalition in the TUC. Finally, today, the British voters went back to the polls for the same exact candidates.\n\nAnd as the dust settles, Welsh poet and leader of the Autonomists, Niclas y Glais, has been sworn in as the new Chairman. The Autonomists support further decentralisation of the Union of Britain and even greater autonomy to the Welsh and Scottish nations, perhaps even full independence."
 worldnews.25.a:0 "British Syndicalism campaigns to fall apart. How quaint."
 worldnews.25.b:0 "We clearly disagree with the Autonomists on centralised rule."
 worldnews.25.c:0 "A brilliant victory for Chairman Glais!"
@@ -181,6 +183,7 @@ worldnews.25.f:0 "Chairman Glais keeps the interest of the Welsh and Scots at he
 
 worldnews.26.t:0 "Annie Kenney elected as Chairwoman of the TUC"
 worldnews.26.d:0 "The 1936 Trade Union Congress in the Union of Britain was made out to be decisive. Long-time Chairman of the TUC, Philip Snowden, declared his resignation, causing the four major factions in the Union, Maximists, Autonomists, Federationists and Congregationists, to butt heads over the position.\n\nAnd as the dust settled, Annie Kenney, the leader of the Congregationists, was elected as the new Chairman, or Chairwoman in this case. Pankhurst is one of only a few female leaders on the planet, and her ideology of a radical feminist and egalitarian approach and isolationist policies fits this situation."
+worldnews.26.d.voted_again:0 "The failure of the initial 1936 Trade Union Congress in the Union of Britain caused much unrest, and until today the country was in inertia, led by an undecisive coalition in the TUC. Finally, today, the British voters went back to the polls for the same exact candidates.\n\nAnd as the dust settled, Annie Kenney, the leader of the Congregationists, was elected as the new Chairman, or Chairwoman in this case. Pankhurst is one of only a few female leaders on the planet, and her ideology of a radical feminist and egalitarian approach and isolationist policies fits this situation."
 worldnews.26.a:0 "A radical feminist? How humiliating for Britain."
 worldnews.26.b:0 "A fair mandate, but a missed opportunity to truly change from current policy."
 worldnews.26.c:0 "Our most sincere congratulations to Chairwoman Kenney."
@@ -189,6 +192,7 @@ worldnews.26.f:0 "Chairwoman Kenney will bring much-needed change to the TUC."
 
 worldnews.27.t:0 "Arthur Horner elected as Chairman of the TUC"
 worldnews.27.d:0 "The 1936 Trade Union Congress in the Union of Britain was made out to be decisive. Long-time Chairman of the TUC, Philip Snowden, declared his resignation, causing the four major factions in the Union, Maximists, Autonomists, Federationists and Congregationists, to butt heads over the position.\n\nAnd as the dust settled, Arthur Horner, the current General Secretary, has been chosen as Snowden's successor. He and his Federationists are in favour of keeping the status quo, a position getting harder and harder to maintain in this changing world."
+worldnews.27.d.voted_again:0 "The failure of the initial 1936 Trade Union Congress in the Union of Britain caused much unrest, and until today the country was in inertia, led by an undecisive coalition in the TUC. Finally, today, the British voters went back to the polls for the same exact candidates.\n\nAnd as the dust settled, Arthur Horner, the current General Secretary, has been chosen as Snowden's successor. He and his Federationists are in favour of keeping the status quo, a position getting harder and harder to maintain in this changing world."
 worldnews.27.a:0 "Nothing new under the sun in Syndicalist lands."
 worldnews.27.b:0 "The workers must be confident if they re-elected the Feds under the same mandate."
 worldnews.27.c:0 "Why change what isn't broken? The TUC is doing fine."
@@ -634,6 +638,15 @@ worldnews.89.d:0 "After days of riots in the capital city of Lisbon, a surprise 
 worldnews.89.a:0 "Long live the revolution!"
 worldnews.89.b:0 "We welcome our socialist brothers in Portugal"
 worldnews.89.c:0 "I see..."
+
+worldnews.90.t:0 "Electoral Gridlock in Britain"
+worldnews.90.d.fuck_it:0 "The 1936 Trade Union Congress in the Union of Britain was made out to be decisive. Long-time Chairman of the TUC, Philip Snowden, declared his resignation, causing the four major factions in the Union, Maximists, Autonomists, Federationists and Congregationists, to butt heads over the position.\n\nAnd as the dust settled, no clear leading faction emerged from the hotly contested elections. As unrest immediately rose and all factions asked for recounts or a new election, the TUC finally decided to elect Federationist Tom Mann as a moderating figure. To many, this is a sign of upcoming political inertia in the Union of Britain."
+worldnews.90.d.vote_again:0 "The 1936 Trade Union Congress in the Union of Britain was made out to be decisive. Long-time Chairman of the TUC, Philip Snowden, declared his resignation, causing the four major factions in the Union, Maximists, Autonomists, Federationists and Congregationists, to butt heads over the position.\n\nAnd as the dust settled, no clear leading faction emerged from the hotly contested elections. As unrest immediately rose and all factions asked for recounts or a new election, the TUC finally caved and scheduled new elections, for next year. To many, this is a sign of upcoming political inertia in the Union of Britain."
+worldnews.90.a:0 "The British Syndicalists stand divided. Let us hope they stay that way."
+worldnews.90.b:0 "This electoral gridlock in Britain is certainly very concerning."
+worldnews.90.c:0 "Why don't the British people revolt? We will give them the leadership they deserve."
+worldnews.90.e:0 "Tom Mann will lead us for the time being. What an absolute disaster."
+worldnews.90.f:0 "We will vote again in one year. Great, nothing done for one year."
 
 ### City Fall Events ###
 
