Forgot to update this

--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -267,7 +267,7 @@ worldnews.35.f:0 "France has long been ruled as a centralised state. The Anarchi
 
 worldnews.36.t:0 "Electoral Gridlock in France"
 worldnews.36.d:0 "The Commune of France is the world's leading Syndicalist nation, united as a federation of city communes and directed by the Comité de Salut Public, the chief executive. Ever since its inception, however, the Second Commune was not uniform in its policy, numerous factions arose, each one with their own idea of which path France should take. As the time for revenge against Germany and the World Revolution closes in, the election of 1936 is set to be important.\n\nIt was so important, in fact, that none of the four factions could acquire a majority. Much like before the election, a coalition must be found, but how will this change the shape of the Commune's politics? Only the men in the CSP itself know."
-worldnews.36.a:0 "The Syndicalists stand divided. Let us hope they stay that way."
+worldnews.36.a:0 "The French Syndicalists stand divided. Let us hope they stay that way."
 worldnews.36.b:0 "This electoral gridlock in France is certainly very concerning."
 worldnews.36.c:0 "Why don't the French people revolt? We will give them the leadership they deserve."
 worldnews.36.e:0 "Hopefully the transition of power goes smoothly once a coalition emerges."
