--- a/localisation/KR_Political_l_english.yml
+++ b/localisation/KR_Political_l_english.yml
@@ -40,35 +40,35 @@ economic_health:0 "WIP, Don't worry about that"
 
 ### Stability Events ###
 kr.political.1.t:0 "Downfall in Stability!"
-kr.political.1.d:0 "With our recent lack of political power, our country has been weakened, no longer are we very stable."
+kr.political.1.d:0 "With our recent lack of political power, our country's stability has been weakened, no longer are we very stable. Once again doubt starts to seep into the political discourse."
 kr.political.1.a:0 "All good things must come to an end."
 
 kr.political.2.t:0 "Downfall in Stability!"
-kr.political.2.d:0 "With our recent lack of political power, our country has been weakened, we're now on the brink of instability."
+kr.political.2.d:0 "With our recent lack of political power, our country's stability has been weakened, we're now on the brink of instability. Few are those who are still perfectly content with our policy."
 kr.political.2.a:0 "This is concerning."
 
 kr.political.3.t:0 "Downfall in Stability!"
-kr.political.3.d:0 "With our recent lack of political power, our country has been weakened and is now considered to be unstable."
+kr.political.3.d:0 "With our recent lack of political power, our country's stability has been weakened, we are now widely considered to be unstable. Fears about the future of our country are starting to be widespread."
 kr.political.3.a:0 "This is only a temporary situation."
 
 kr.political.4.t:0 "Downfall in Stability!"
-kr.political.4.d:0 "With our recent lack of political power, our country has been weakened even more. Riots and strikes are now common place, and our government is struggling to assert its authority."
+kr.political.4.d:0 "With our recent lack of political power, our country's stability has been weakened even more. Riots and strikes are now common place and our government is struggling to assert its authority."
 kr.political.4.a:0 "This doesn't bode well."
 
 kr.political.5.t:0 "Downfall in Stability!"
-kr.political.5.d:0 "With our recent lack of political power, our country has plunged into a disaster. The situation is, by any measure, catastrophic. There is talk of revolution on the streets and people have lost faith in our government. We are struggling to keep our grasp on the country."
+kr.political.5.d:0 "With our recent lack of political power, our country has plunged into a disaster. The situation is, by any measure, catastrophic. There is talk of revolution and coups on the streets and people have lost faith in our government. We are struggling to keep our grasp on the country."
 kr.political.5.a:0 "This is a disaster!"
 
 kr.political.6.t:0 "Increase in Stability!"
-kr.political.6.d:0 "With our recent increase of political power, we are beginning to control the situation. However, we are still far from safe."
+kr.political.6.d:0 "With our recent increase of political power, we are finally beginning to regain control on the situation. However, we are still far from safe. At least the major riots and talk of revolution have turned back into civil strikes."
 kr.political.6.a:0 "The worst is over!"
 
 kr.political.7.t:0 "Increase in Stability!"
-kr.political.7.d:0 "With our recent increase of political power, the end is in sight; we are nearly a stable nation."
+kr.political.7.d:0 "With our recent increase of political power, the end is in sight; we are nearly a stable nation. If the people still don't trust us fully, at least they don't feel compelled to violence and anger anymore."
 kr.political.7.a:0 "We are almost back to normal."
 
 kr.political.8.t:0 "Increase in Stability!"
-kr.political.8.d:0 "With our recent increase of political power, we are finally stable once more. Hopefully it won't happen again."
+kr.political.8.d:0 "With our recent increase of political power, we are finally stable once more. The people trust us to run daily business again, and calm returns to the strets, hopefully this won't happen again."
 kr.political.8.a:0 "The [Root.GetAdjective] nation is strong."
 
 kr.political.9.t:0 "Potential Increase in Stability"
@@ -77,24 +77,24 @@ kr.political.9.a:0 "I understand how to raise my stability."
 
 ### Popularity Events ###
 kr.political.11.t:0 "Very High Popularity"
-kr.political.11.d:0 "The civilian support for the ruling party has reached a very high level which influences our political power."
-kr.political.11.a:0 "Great!"
+kr.political.11.d:0 "The civilian support for the ruling party has reached a very high level, which influences our political power. Our political opposition is nearly inexistent and we stand in position to push any reform we please."
+kr.political.11.a:0 "This overwhelming support strengthens our cause!"
 
 kr.political.12.t:0 "High Popularity"
-kr.political.12.d:0 "The civilian support for the ruling party has reached a high level which influences our political power."
-kr.political.12.a:0 "Nice!"
+kr.political.12.d:0 "The civilian support for the ruling party has reached a high level, which influences our political power. Our political opposition is entrenched and only the most divisive reforms need our personal investment."
+kr.political.12.a:0 "We thank our citizens for their trust."
 
 kr.political.13.t:0 "Average Popularity"
-kr.political.13.d:0 "The civilian support for the ruling party is at an average level which influences our political power."
-kr.political.13.a:0 "Good."
+kr.political.13.d:0 "The civilian support for the ruling party has reached an average level, which influences our political power. While we may need to consult our opposition for some reforms, we can still govern well."
+kr.political.13.a:0 "Majority support is all we need."
 
 kr.political.14.t:0 "Low Popularity"
-kr.political.14.d:0 "The civilian support for the ruling party is low which influences our political power."
-kr.political.14.a:0 "This is bad."
+kr.political.14.d:0 "The civilian support for the ruling party has reached a low level, which influences our political power. Our opposition is strong enough to form coalitions against us, forcing us to consult and compromise with them often."
+kr.political.14.a:0 "We might have to make some compromises."
 
 kr.political.15.t:0 "Very Low Popularity"
-kr.political.15.d:0 "The civilian support for the ruling party has reached a very low level which influences our political power."
-kr.political.15.a:0 "It's a catastrophe!"
+kr.political.15.d:0 "The civilian support for the ruling party has reached a very low level, which influences our political power. Our party is nearly inexistent, and our reforms live or die on the whims of the opposition."
+kr.political.15.a:0 "We will manage to govern in the end."
 
 ### Minister Influences Ruling Party Events ###
 kr.political.16.t:0 "A Minister Supports His Ideology"
