two description for Ukrainian focuses

--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -399,9 +399,9 @@ UKR_Friendship_Nations_desc:0 "-"
 UKR_Khrushchyovka:0 "'Khrushchyovka'"
 UKR_Khrushchyovka_desc:0 "-"
 UKR_Pereyaslav_treaty:0 "Treaty of Pereyaslav"
-UKR_Pereyaslav_treaty_desc:0 "-"
+UKR_Pereyaslav_treaty_desc:0 "Since 1918 both Russia and the Ukraine have been independent, but weak states. But now our countries reached domestic stability and more and more citizens are calling for reunification. Although it could lead to a split with Mitteleuropa, but we can't miss this chance to reunite into a Greater Russia that confidently can oppose German hegemony in Europe."
 UKR_OUN_Embargo:0 "Embargo on the German goods"
-UKR_OUN_Embargo_desc:0 "-"
+UKR_OUN_Embargo_desc:0 "Since 1918 we have been critically dependent on German goods, which fill our market. On account of this dependency our farmers aren't able to develop their own business and compete with the German farmers, who hold key positions in our economy! We have to reconstruct our national agriculture market and destroy the shameful dependence from German Empire."
 UKR_New_Scientists:0 "New Scientists"
 UKR_New_Scientists_desc:0 "-"
 
